<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidContentProvider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Number">Number</string>
    <string name="Add">Add</string>
    <string name="Retrive">Retrieve</string>
    <string name="Delete">Delete All</string>

</resources>
