<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"/>
    <EditText
        android:id="@+id/EditText_Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Number"/>
    <EditText
        android:id="@+id/EditText_Number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Button_Add"
        android:text="@string/Add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAddContact"/>

    <Button
        android:id="@+id/Button_Retrieve"
        android:text="@string/Retrive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickRetrieveContact"/>

    <Button
        android:id="@+id/Button_DeleteAll"
        android:text="@string/Delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDeleteContacts"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_Retrieve"/>

</LinearLayout>
